--- a/package.json
+++ b/package.json
@@ -8,7 +8,18 @@
     "Simon Elvery <simon@elvery.net>"
   ],
   "aunty": {
-    "type": "svelte"
+    "type": "svelte",
+    "webpack": {
+      "devtool": "source-map"
+    },
+    "build": {
+      "includedDependencies": [
+        "layercake"
+      ],
+      "entry": [
+        "index"
+      ]
+    }
   },
   "scripts": {
     "start": "aunty serve",
@@ -18,13 +29,18 @@
   "devDependencies": {
     "@abcnews/aunty": "^16.0.0",
     "@testing-library/svelte": "^5.2.7",
+    "@types/d3-dsv": "^3.0.7",
     "@types/jest": "^29.5.14",
-    "@types/webpack-env": "^1.18.8"
+    "@types/webpack-env": "^1.18.8",
+    "d3-dsv": "^3.0.1"
   },
   "dependencies": {
     "@abcnews/alternating-case-to-object": "^3.1.1",
     "@abcnews/env-utils": "^4.0.0",
     "@abcnews/mount-utils": "^3.0.0",
-    "svelte": "^5.20.2"
+    "d3-ternary": "^3.0.7",
+    "layercake": "^8.4.3",
+    "svelte": "^5.20.2",
+    "valibot": "^1.0.0"
   }
 }
