--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "start": "aunty serve",
     "dev": "aunty serve",
-    "test": "aunty test"
+    "test": "aunty test",
+    "postinstall": "patch-package"
   },
   "devDependencies": {
     "@abcnews/aunty": "^16.0.0",
@@ -18,7 +19,8 @@
     "@types/d3-dsv": "^3.0.7",
     "@types/jest": "^29.5.14",
     "@types/webpack-env": "^1.18.8",
-    "d3-dsv": "^3.0.1"
+    "d3-dsv": "^3.0.1",
+    "patch-package": "^8.0.0"
   },
   "dependencies": {
     "@abcnews/alternating-case-to-object": "^3.1.1",
@@ -27,6 +29,7 @@
     "@abcnews/mount-utils": "^3.0.0",
     "@abcnews/svelte-scrollyteller": "github:abcnews/svelte-scrollyteller#feature/future-news",
     "carbon-components-svelte": "^0.88.4",
+    "carbon-icons-svelte": "^13.3.0",
     "d3-ternary": "^3.0.7",
     "svelte": "^5.20.2",
     "valibot": "^1.0.0"
