--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@abcnews/alternating-case-to-object": "^3.1.1",
     "@abcnews/base-36-props": "^1.4.0",
+    "@abcnews/dev-proxy": "^1.2.1",
     "@abcnews/env-utils": "^4.0.0",
     "@abcnews/mount-utils": "^3.0.0",
     "@abcnews/svelte-scrollyteller": "github:abcnews/svelte-scrollyteller#feature/future-news",
