--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "election-ternary-plots",
-  "version": "1.0.0-pre",
-  "description": "A project generated from aunty's svelte project template.",
-  "license": "MIT",
-  "private": true,
-  "contributors": [
-    "Simon Elvery <simon@elvery.net>"
-  ],
-  "scripts": {
-    "start": "aunty serve",
-    "dev": "aunty serve",
-    "test": "aunty test",
-    "postinstall": "patch-package"
-  },
-  "devDependencies": {
-    "@abcnews/aunty": "^16.0.0",
-    "@testing-library/svelte": "^5.2.7",
-    "@types/d3-dsv": "^3.0.7",
-    "@types/jest": "^29.5.14",
-    "@types/webpack-env": "^1.18.8",
-    "d3-dsv": "^3.0.1",
-    "patch-package": "^8.0.0"
-  },
-  "dependencies": {
-    "@abcnews/alternating-case-to-object": "^3.1.1",
-    "@abcnews/base-36-props": "^1.4.0",
-    "@abcnews/dev-proxy": "^1.2.1",
-    "@abcnews/env-utils": "^4.0.0",
-    "@abcnews/mount-utils": "^3.0.0",
-    "@abcnews/svelte-scrollyteller": "github:abcnews/svelte-scrollyteller#feature/mobile-row-variant",
-    "carbon-components-svelte": "^0.88.4",
-    "carbon-icons-svelte": "^13.3.0",
-    "d3-ternary": "^3.0.7",
-    "svelte": "^5.20.2",
-    "valibot": "^1.0.0"
-  }
+	"name": "election-ternary-plots",
+	"version": "1.0.0",
+	"description": "A project generated from aunty's svelte project template.",
+	"license": "MIT",
+	"private": true,
+	"contributors": [
+		"Simon Elvery <simon@elvery.net>"
+	],
+	"scripts": {
+		"start": "aunty serve",
+		"dev": "aunty serve",
+		"test": "aunty test",
+		"postinstall": "patch-package"
+	},
+	"devDependencies": {
+		"@abcnews/aunty": "^16.0.0",
+		"@testing-library/svelte": "^5.2.7",
+		"@types/d3-dsv": "^3.0.7",
+		"@types/jest": "^29.5.14",
+		"@types/webpack-env": "^1.18.8",
+		"d3-dsv": "^3.0.1",
+		"patch-package": "^8.0.0"
+	},
+	"dependencies": {
+		"@abcnews/alternating-case-to-object": "^3.1.1",
+		"@abcnews/base-36-props": "^1.4.0",
+		"@abcnews/dev-proxy": "^1.2.1",
+		"@abcnews/env-utils": "^4.0.0",
+		"@abcnews/mount-utils": "^3.0.0",
+		"@abcnews/svelte-scrollyteller": "github:abcnews/svelte-scrollyteller#feature/mobile-row-variant",
+		"carbon-components-svelte": "^0.88.4",
+		"carbon-icons-svelte": "^13.3.0",
+		"d3-ternary": "^3.0.7",
+		"svelte": "^5.20.2",
+		"valibot": "^1.0.0"
+	}
 }
