--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"@testing-library/svelte": "^5.2.7",
 		"@types/d3-dsv": "^3.0.7",
 		"@types/d3-scale": "^4.0.9",
+		"@types/d3-shape": "^3.1.8",
+		"@types/d3-time-format": "^4.0.3",
 		"@types/jest": "^30.0.0",
 		"@types/webpack-env": "^1.18.8",
 		"d3-dsv": "^3.0.1",
