--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@abcnews/env-utils": "^6.0.0",
 		"@abcnews/mount-utils": "^3.0.0",
 		"@abcnews/svelte-scrollyteller": "^3.0.1",
+		"async": "^3.2.6",
 		"d3-scale": "^4.0.2",
 		"d3-ternary": "^3.0.7",
 		"date-fns": "^4.1.0",
